# pickandplace-robot

./: .gitmodules  README.md  TODO.md
camera_to_cv/: CMakeLists.txt
camera_to_cv/cfg/: DynamicParams.cfg
camera_to_cv/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
camera_to_cv/devel/include/camera_to_cv/: points_array.h
camera_to_cv/devel/lib/camera_to_cv/: camera_to_cv_node
camera_to_cv/devel/lib/pkgconfig/: camera_to_cv.pc
camera_to_cv/devel/lib/python2.7/dist-packages/camera_to_cv/msg/: __init__.py  _points_array.py
camera_to_cv/devel/share/camera_to_cv/cmake/: camera_to_cv-msg-paths.cmake  camera_to_cvConfig.cmake
camera_to_cv/devel/share/common-lisp/ros/camera_to_cv/msg/: _package.lisp  _package_points_array.lisp  camera_to_cv-msg.asd  points_array.lisp
camera_to_cv/devel/share/gennodejs/ros/camera_to_cv/msg/: _index.js  points_array.js
camera_to_cv/devel/share/roseus/ros/camera_to_cv/: manifest.l
camera_to_cv/devel/share/roseus/ros/camera_to_cv/msg/: points_array.l
camera_to_cv/launch/: camera_and_sim.launch
camera_to_cv/src/: CMakeLists.txt  image_converter.cpp  image_converter_ad_thr_notw.cpp  image_converter_blue_no_adpthr.cpp  image_converter_old.cpp  image_converter_workingbup.cpp
camera_to_cv/src/src/: image_converter.cpp
camera_ws/devel/: .catkin  .rosinstall  setup.sh
camera_ws/devel/lib/pkgconfig/: usb_cam.pc
camera_ws/devel/lib/usb_cam/: usb_cam_node
camera_ws/devel/share/usb_cam/cmake/: usb_camConfig.cmake
moveit_fanuc/: CMakeLists.txt  package.xml
moveit_fanuc/src/: cartesian_path.cpp  move_group_interface_tutorial.cpp  move_group_interface_tutorial_original.cpp  move_group_interface_tutorial_working_constantpath.cpp  pick_place.cpp  pose_constrain_path.cpp
rviz_markers/: CMakeLists.txt  package.xml
rviz_markers/src/: basic_shapes.cpp  frame_tf2_broadcaster.cpp
set_io/: CMakeLists.txt  package.xml
set_io/src/: set_io_client.cpp  set_io_server.cpp
set_io/srv/: set_io.srv
usb_cam/nodes/: usb_cam_node.cpp
